--- a/rest-call-demo/expose-service/build.gradle
+++ b/rest-call-demo/expose-service/build.gradle
@@ -11,7 +11,7 @@ sourceCompatibility = '17'
 repositories {
 	mavenCentral()
 }
-
+apply plugin: 'project-report'
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
