--- a/mongodb-crud-demo/src/main/resources/application.properties
+++ b/mongodb-crud-demo/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.data.mongodb.database=BookStore
 
 
-spring.data.mongodb.uri=mongodb\://localhost\:27017/mongo
+spring.data.mongodb.uri=mongodb\://localhost\:27017/BookStore
 
 
 openapi.dev-url=http://localhost:8080
