--- a/profile-demo/src/main/resources/application.properties
+++ b/profile-demo/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-spring.profiles.active=test
+##Below spring.profiles.active property is commented and its set in ProfileDemoApplication.java. It's read from environment variable and set as active profile
+
+##spring.profiles.active=test
+spring.datasource.url=jdbc:mysql://production-server:3306/default
 
