--- a/config-server-demo/sample-rest-service/src/main/resources/application.properties
+++ b/config-server-demo/sample-rest-service/src/main/resources/application.properties
@@ -1,6 +1,2 @@
 spring.application.name = microservice-one
-#spring.cloud.config.uri=http://localhost:8888
-#management.security.enabled=false
-#spring.profiles.active=dev
-spring.devtools.add-properties=false
-spring.config.import=http://localhost:8888/application/dev
+spring.config.import=configserver:http://localhost:8888
